# dmbcs-trader-desk

./: .gitignore  AUTHORS  ChangeLog  INSTALL  NEWS  README.md  configure.ac  makefile.am  setup-hint.sh  trader-desk.pc.in
doc/: .gitignore  detailed-analysis.xcf  grid.xcf  makefile.am  preferences.xcf  trader-desk.css  trader-desk.texinfo
po/: .gitignore  Makevars  POTFILES.in  en_GB.po
trader-desk/: alpha-vantage--monitor.cc  alpha-vantage--monitor.h  alpha-vantage.cc  alpha-vantage.h  analyzer.cc  analyzer.h  application--ingest-market.cc  application--update-closing-prices.cc  application.cc  application.h  chart-context.cc  chart-context.h  chart-data.cc  chart-data.h  chart-grid.cc  chart-grid.h  chart.cc  chart.h  colour.cc  colour.h  company-name-entry.cc  company-name-entry.h  date-axis.cc  date-axis.h  date-range-scale.cc  date-range-scale.h  db.cc  db.h  delta-analyzer.cc  delta-analyzer.h  delta-region.cc  delta-region.h  hand-analysis-widget.cc  hand-analysis-widget.h  makefile.am  markets.cc  markets.h  moving-average-analyzer.cc  moving-average-analyzer.h  mysql.cc  (+23 more)
